--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,8 @@ sign-eventstream = ["aws-smithy-eventstream", "bytes"]
 default = ["sign-http"]
 
 [dependencies]
-aws-smithy-eventstream = { path = "../../../rust-runtime/aws-smithy-eventstream", optional = true }
-aws-smithy-http = { path = "../../../rust-runtime/aws-smithy-http" }
+aws-smithy-eventstream = { version = "0.55", optional = true }
+aws-smithy-http = "0.55"
 bytes = { version = "1", optional = true }
 form_urlencoded = { version = "1.0", optional = true }
 hex = "0.4"
